FIX: Terminal errors caused by VLC

--- a/SpaceInvadersGame/SpaceInvadersGame.csproj
+++ b/SpaceInvadersGame/SpaceInvadersGame.csproj
@@ -31,5 +31,10 @@
       <IsDefaultItem>true</IsDefaultItem>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+<!--    <PackageReference Include="LibVLCSharp" />-->
+<!--    <PackageReference Include="Uno.WinUI.MediaPlayer.Skia.Gtk" />-->
+<!--    <PackageReference Include="VideoLAN.LibVLC.Windows" />-->
+  </ItemGroup>
 
 </Project>
